2nd commit. Changed realization of lion feline isolation. Deleted interface FelineInterface. Fixed some tests and added new. Other small fixes.